2025-11-26T01:58:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19689990969 # 820
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-26
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1142 1622 / 1146 1626
* notice: next accum: outdated-unq outdated-all / unq all: 1143 1623 / 1146 1626
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-11] / []

2025-11-19T01:56:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19487020305 # 813
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-19
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 1142 1622 / 1145 1625
* notice: next accum: outdated-unq outdated-all / unq all: 1142 1622 / 1146 1626
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-18]

2025-11-17T01:58:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19415984594 # 811
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-17
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1142 1622 / 1144 1624
* notice: next accum: outdated-unq outdated-all / unq all: 1142 1622 / 1145 1625
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-16]

2025-11-15T01:53:32Z: