@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-26T01:58:26Z",
-  "count_outdated" : 1623,
-  "uniques_outdated" : 1143,
+  "timestamp" : "2025-11-27T01:55:59Z",
+  "count_outdated" : 1624,
+  "uniques_outdated" : 1144,
   "count" : 1626,
   "uniques" : 1146,
   "clones" : [
-    {
-      "timestamp": "2025-11-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-16T00:00:00Z",
       "count": 1,
