@@ -1,3 +1,12 @@
+2025-11-27T01:55:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19722742102 # 821
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-27
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 1143 1623 / 1146 1626
+* notice: next accum: outdated-unq outdated-all / unq all: 1144 1624 / 1146 1626
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-11-12] / []
+
 2025-11-26T01:58:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19689990969 # 820
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-26
